--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contoh Playlist Lagu</title>
+</head>
+<body>
+
+    <h1>Playlist Keren Gue</h1>
+
+    <h3>1. Cinematic Epic</h3>
+    <audio controls>
+        <source src="https://www.bensound.com/bensound-music/bensound-cinematic.mp3" type="audio/mpeg">
+        Browser lo jadul, bro, gak support tag audio.
+    </audio>
+
+    <h3>2. Groovy Hip-Hop</h3>
+    <audio controls>
+        <source src="https://www.bensound.com/bensound-music/bensound-groovyhiphop.mp3" type="audio/mpeg">
+        Browser lo jadul, bro, gak support tag audio.
+    </audio>
+
+    <h3>3. The Elevator Bossa Nova</h3>
+    <audio controls>
+        <source src="https://www.bensound.com/bensound-music/bensound-theelevatorbossanova.mp3" type="audio/mpeg">
+        Browser lo jadul, bro, gak support tag audio.
+    </audio>
+
+    <h3>4. Funky Element</h3>
+    <audio controls>
+        <source src="merahmuda.mp3" type="audio/mpeg">
+        Browser lo jadul, bro, gak support tag audio.
+    </audio>
+
+    <h3>5. Sunny Travel</h3>
+    <audio controls>
+        <source src="https://www.bensound.com/bensound-music/bensound-sunnytravel.mp3" type="audio/mpeg">
+        Browser lo jadul, bro, gak support tag audio.
+    </audio>
+
+</body>
+</html>
 
