--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contoh Playlist Lagu</title>
+    <title>Playlist Keren dengan Gambar</title>
 </head>
 <body>
 
     <h1>Playlist Keren Gue</h1>
 
     <h3>1. Cinematic Epic</h3>
-    <audio controls>
+    <img src="https://placehold.co/200x200/E86F6F/white?text=Epic" alt="Album Art Cinematic Epic">
+    <br> <audio controls>
         <source src="https://www.bensound.com/bensound-music/bensound-cinematic.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
     </audio>
 
     <h3>2. Groovy Hip-Hop</h3>
+    <img src="https://placehold.co/200x200/6F86E8/white?text=Groovy" alt="Album Art Groovy Hip-Hop">
+    <br>
     <audio controls>
         <source src="https://www.bensound.com/bensound-music/bensound-groovyhiphop.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
     </audio>
 
     <h3>3. The Elevator Bossa Nova</h3>
+    <img src="https://placehold.co/200x200/6FE87B/white?text=Bossa" alt="Album Art Elevator Bossa Nova">
+    <br>
     <audio controls>
         <source src="https://www.bensound.com/bensound-music/bensound-theelevatorbossanova.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
     </audio>
 
-    <h3>4. merah jambu</h3>
+    <h3>4. Funky Element</h3>
+    <img src="https://placehold.co/200x200/E8D66F/white?text=Funky" alt="Album Art Funky Element">
+    <br>
     <audio controls>
-        <source src="merahmuda.mp3" type="audio/mpeg">
+        <source src="https://www.bensound.com/bensound-music/bensound-funkyelement.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
     </audio>
 
     <h3>5. Sunny Travel</h3>
+    <img src="https://placehold.co/200x200/E8A26F/white?text=Sunny" alt="Album Art Sunny Travel">
+    <br>
     <audio controls>
         <source src="https://www.bensound.com/bensound-music/bensound-sunnytravel.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
@@ -41,4 +50,3 @@
 
 </body>
 </html>
-
