--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <h1>Playlist Keren Gue</h1>
 
-    <h3>1. Cinematic Epic</h3>
+    <h3>1. merah jambu</h3>
     <img src="https://placehold.co/200x200/E86F6F/white?text=Epic" alt="Album Art Cinematic Epic">
     <br> <audio controls>
-        <source src="https://www.bensound.com/bensound-music/bensound-cinematic.mp3" type="audio/mpeg">
+        <source src="merahmuda.mp3" type="audio/mpeg">
         Browser lo jadul, bro, gak support tag audio.
     </audio>
 
